--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -23,8 +23,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           username: ${{ github.repository_owner }}
           topic: 'showcase'
-          format: 'list'
-          title: ''
+          format: 'card'
+          title: 'Мои проекты'
           max_repos: 4
           show_description: true
           show_language: true
